# iolink_utils

./: .gitignore  README.md  ctypesAndCopy.md  pyproject.toml
.github/workflows/: python-app.yml  tests.yml
src/iolink_utils/: __version__.py  exceptions.py
src/iolink_utils/crc/: crcLookupTables.py
src/iolink_utils/definitions/: _internal.py  directParameterPage.py  eventInfo.py  eventMemory.py  events.py  iServiceNibble.py  m_sequence_capability.py  masterCommand.py  profiles.py  systemCommand.py
src/iolink_utils/iodd/: iodd.py  ioddValidator.py  ioddXmlDoc.py  iodd_documentInfo.py  iodd_features.py  iodd_fileInfo.py  iodd_filename.py  iodd_identity.py  iodd_physical_layer.py  iodd_version.py  iodd_xmlDoc.py
src/iolink_utils/messageInterpreter/: ISDU.py  ISDUrequests.py  ISDUresponses.py  commChannelDiagnosis.py  commChannelISDU.py  commChannelPage.py  messageInterpreter.py  transaction.py
src/iolink_utils/octetDecoder/: _compressChecksum.py  _octetDecoderBase.py  _octetStreamDecoderInternal.py  _processDataDecoderInternal.py  octetDecoder.py  octetStreamDecoderSettings.py  processDataDecoder.py
src/iolink_utils/octetStreamDecoder/: _octetStreamDecoderInternal.py  octetStreamDecoder.py  octetStreamDecoderMessages.py  octetStreamDecoderSettings.py
src/iolink_utils/processDataDecoder/: _processDataDecoderInternal.py
src/iolink_utils/utils/: calculateProcessDataLength.py  directParameterTranslator.py  fsp_ioStruct.py  version.py
tests/definitions/: test_bitrate.py  test_eventMemory_event.py  test_eventMemory_eventMemory.py  test_internal.py  test_profiles.py
tests/iodd/: test_iodd.py  test_iodd_fileInfo.py  test_iodd_version.py
tests/iodd/IODDViewer1.4_Examples/: IO-Link-04-ExternalLangDevice-20211215-IODD1.1-de.xml  IO-Link-04-ExternalLangDevice-20211215-IODD1.1-zh.xml
tests/messageInterpreter/: test_commChannelPage.py  test_commChannelProcess.py  test_messageInterpreter.py  test_transactionPage.py  test_transactionProcess.py
tests/messageInterpreter/isdu/: test_commChannelISDU.py  test_isdu_ISDU.py  test_isdu_ISDUrequests.py  test_isdu_ISDUresponses.py
tests/octetDecoder/: test_octetDecoder_mSequenceCapability.py  test_octetDecoder_octetDecoderBase.py  test_octetDecoder_processData.py  test_octetDecoder_settings.py  test_octetStreamDecoder.py
tests/octetStreamDecoder/: test_octetStreamDecoder.py  test_octetStreamDecoder_settings.py
tests/processDataDecoder/: test_processDataDecoder.py
tests/utils/: test_calculateProcessDataLength.py  test_cycleTime.py  test_directParameterTranslator.py  test_utils_fsp_iostructcrc.py  test_utils_version.py
(+17 files in other folders)
